--- a/CODIGO/MyApp/app/src/main/res/layout/activity_registro.xml
+++ b/CODIGO/MyApp/app/src/main/res/layout/activity_registro.xml
@@ -18,7 +18,8 @@
         android:hint="Nombre"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="95dp" />
+        tools:layout_editor_absoluteY="95dp"
+        tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/etApellido"
@@ -99,12 +100,12 @@
         app:layout_constraintTop_toBottomOf="@+id/etComision" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnRegistro"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Registrar"
         tools:layout_editor_absoluteX="105dp"
         tools:layout_editor_absoluteY="493dp"
         android:background="@drawable/button_rounded"
-        android:onClick="registrarse"/>
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
