--- a/CODIGO/MyApp/app/src/main/res/layout/activity_main.xml
+++ b/CODIGO/MyApp/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Bienvenido a nuestra App"
+        android:text="Bienvenido a CovidTest"
         android:textColor="#020202"
         android:textSize="20sp"
         tools:layout_editor_absoluteX="90dp"
@@ -23,7 +23,6 @@
         android:id="@+id/etBateria"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="bateria"
         android:textColor="#020202"
         android:textSize="18sp"
         tools:layout_editor_absoluteX="120dp"
