--- a/CODIGO/MyApp/app/src/main/res/layout/activity_test.xml
+++ b/CODIGO/MyApp/app/src/main/res/layout/activity_test.xml
@@ -103,6 +103,7 @@
         android:text="Medir"
         android:textColor="#0E0C0C"
         android:background="@drawable/button_rounded"
+        android:onClick="TomarTemperatura"
         tools:layout_editor_absoluteX="219dp"
         tools:layout_editor_absoluteY="153dp"
         tools:ignore="MissingConstraints" />
