--- a/CODIGO/MyApp/app/src/main/res/layout/activity_menu.xml
+++ b/CODIGO/MyApp/app/src/main/res/layout/activity_menu.xml
@@ -11,45 +11,65 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
         android:text="MENU PRINCIPAL"
         android:textAlignment="center"
-        android:textColor="#0C0C0C"
-        android:textSize="20sp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="125dp"
-        tools:layout_editor_absoluteY="97dp" />
+        android:textColor="#F1ECEC"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnTest"
         android:layout_width="210dp"
         android:layout_height="48dp"
-        android:text="Realizar TEST"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="140dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:background="@drawable/button_rounded"
         android:onClick="irATestCOVID"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="100dp"
-        tools:layout_editor_absoluteY="248dp"
-        android:background="@drawable/button_rounded" />
+        android:text="Realizar TEST"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
         android:id="@+id/btnListaEventos"
         android:layout_width="210dp"
         android:layout_height="48dp"
-        android:text="Ver Lista Eventos"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:background="@drawable/button_rounded"
         android:onClick="irAListaEventos"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="100dp"
-        tools:layout_editor_absoluteY="421dp"
-        android:background="@drawable/button_rounded" />
+        android:text="Ver Lista Eventos"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnRecordatorio" />
 
     <Button
         android:id="@+id/btnRecordatorio"
         android:layout_width="210dp"
         android:layout_height="48dp"
-        android:text="Recordatorio de Turnos"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:background="@drawable/button_rounded"
         android:onClick="irARecordatorio"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="100dp"
-        tools:layout_editor_absoluteY="335dp"
-        android:background="@drawable/button_rounded" />
+        android:text="Recordatorio de Turnos"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnTest" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
